[package]
name = "homelab_installer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
better-panic = "0.3.0"
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
directories = "6.0.0"
dmidecode = "1.0.1"
futures = "0.3.32"
human-panic = "2.0.8"
lazy_static = "1.5.0"
libblkid-rs = "0.4.2"
libc = "0.2.184"
ratatui = { version = "0.30.0", features = ["scrolling-regions", "serde"] }
ratatui-textarea = { version = "0.9.0", features = ["search", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
signal-hook = "0.4.4"
strip-ansi-escapes = "0.2.1"
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "fs",
] }
tokio-util = "0.7.18"
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
udev = { version = "0.9.3", features = ["send", "sync"] }
varlink = { version = "13.0.0", features = ["tokio"] }
varlink_derive = "13.0.0"
zbus = { version = "5.14.0", features = ["tokio"] }
zvariant = "5.10.0"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
